examples/memory/positive/04_explicit_recovery.skd
// Memory example 04: explicit on error recovery with no implicit rollback promise.

struct ConfigText {
    Text content
    Bool fallback_used
}

fn load_config(Memory assets_memory, Path path) ConfigText {
    place in assets_memory {
        new Text raw_text = read(path)
        new ConfigText config_result = {content = raw_text, fallback_used = false}
        return config_result
    } on error {
        assets_memory.clear()
        return {content = "memory overflow", fallback_used = true}
    }
}
