examples/memory/negative/06_use_after_clear.skd
// Negative memory example 06: obvious use-after-clear must be rejected.

fn render_frame(Memory frame_memory) Int {
    new Text frame_text = ""

    place in frame_memory {
        frame_text = "hello"
    }

    frame_memory.clear()
    output(frame_text)
    return 0
}
